# youareraymond

./: README.md  main.py  pyproject.toml
pages/: beta.py  colors  extra.py  pages.py
static/content/extra/: ideas.txt
templates/: base.html  index.html  page.html
templates/extras/: betapage.html  extra.html
